tests/ui/async-await/spurious-static-bound-issue-115376.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/spurious-static-bound-issue-115376.rs:4:12
   |
LL |     let _: &'static T;
   |            ^^^^^^^^^^
   |            |
   |            the parameter type `T` must be valid for the static lifetime...
   |            ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | async fn test<T: 'static>(_: &u8) {
   |                +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
